--- a/source/sass/components/header.scss
+++ b/source/sass/components/header.scss
@@ -1,3 +1,11 @@
-.page-header {
+.page-header--index {
+  background-color: #1d2631;
+  background-image: url("../img/bg-back-mobile@1x.jpg");
+  background-size: 100% auto;
+  background-position: top center;
+  background-repeat: no-repeat;
+}
+
+page-header {
   background-color: #1d2631;
 }
