--- a/source/sass/components/header.scss
+++ b/source/sass/components/header.scss
@@ -6,6 +6,10 @@
   background-repeat: no-repeat;
 }
 
-page-header {
+.page-header {
   background-color: #1d2631;
+}
+
+.page-header__logo-svg {
+  padding-left: 20px;
 }
