--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -1,9 +1,3 @@
-$Open-Sans:'Open-Sans',
-'Arial',
-sans-serif;
-$Sans-Bold:'Open-Sans-Bold',
-'Arial',
-sans-serif;
-$Sans-Light: 'Open-Sans-Light',
-'Arial',
-sans-serif;
+$Open-Sans:'Open-Sans', 'Arial', sans-serif;
+$Sans-Bold:'Open-Sans-Bold', 'Arial', sans-serif;
+$Sans-Light: 'Open-Sans-Light', 'Arial', sans-serif;
