--- a/source/sass/components/page-intro.scss
+++ b/source/sass/components/page-intro.scss
@@ -5,7 +5,7 @@
   font-size: 18px;
   line-height: 18px;
   border-radius: 25px;
-  border: 3px solid #fff;
+  border: 3px solid #ffffff;
   padding: 10px;
   margin-left: 7px;
   margin-top: 10px;
