--- a/source/sass/base/fonts.scss
+++ b/source/sass/base/fonts.scss
@@ -1,25 +1,25 @@
 @font-face {
-  font-family: 'Open-Sans';
-  src: url('../fonts/opensans.woff') format('woff');
-  src: url('../fonts/opensans.woff2') format('woff2');
+  font-family: "Open-Sans";
+  src: url("../fonts/opensans.woff") format("woff");
+  src: url("../fonts/opensans.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Open-Sans-Bold';
-  src: url('../fonts/opensansbold.woff') format('woff');
-  src: url('../fonts/opensansbold.woff2') format('woff2');
+  font-family: "Open-Sans-Bold";
+  src: url("../fonts/opensansbold.woff") format("woff");
+  src: url("../fonts/opensansbold.woff2") format("woff2");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Open-Sans-Light';
-  src: url('../fonts/opensanslight.woff') format('woff');
-  src: url('../fonts/opensanslight.woff2') format('woff2');
+  font-family: "Open-Sans-Light";
+  src: url("../fonts/opensanslight.woff") format("woff");
+  src: url("../fonts/opensanslight.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
