--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -1,7 +1,7 @@
 $Open-Sans: "Open-Sans",
 "Arial",
 sans-serif;
-$Sans-Bold: "Open-Sans-Bold',
+$Sans-Bold: "Open-Sans-Bold",
 "Arial",
 sans-serif;
 $Sans-Light:
