--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -4,7 +4,6 @@ sans-serif;
 $Sans-Bold: "Open-Sans-Bold",
 "Arial",
 sans-serif;
-$Sans-Light:
-"Open-Sans-Light",
+$Sans-Light: "Open-Sans-Light",
 "Arial",
 sans-serif;
