--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -1,9 +1,21 @@
-$Open-Sans: "Open-Sans",
-  "Arial",
-  sans-serif;
-$Sans-Bold: "Open-Sans-Bold",
-  "Arial",
-  sans-serif;
-$Sans-Light: "Open-Sans-Light",
-  "Arial",
-  sans-serif;
+$Open-Sans: "Open-Sans","Arial", sans-serif;
+
+$dark-blue: #283645;
+
+$white: #ffffff;
+
+$light-red: #d22856;
+
+$dark-white: #f2f2f2;
+
+$darken-blue: #1d2631;
+
+$light-pink: #d63963;
+
+$lighten-pink: #d53e67;
+
+$light-grey: #e9ebec;
+
+$tablet-width: 660px;
+
+$desktop-width: 1200px;
