--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -1,5 +1,9 @@
 .main-nav {
   font-size: 18px;
   line-height: 32px;
-  background-color: #283645;
+  background-color: $dark-blue;
+
+  @media (min-width: $desktop-width) {
+    background: rgba(0, 0, 0, 0.3);
+  }
 }
