--- a/source/sass/components/photo.scss
+++ b/source/sass/components/photo.scss
@@ -1,5 +1,5 @@
 .photo__description {
-  color: #283645;
+  color: $dark-blue;
   line-height: 30px;
   font-size: 14px;
   font-weight: normal;
@@ -7,37 +7,65 @@
   padding: 10px;
   padding-left: 38px;
   padding-right: 38px;
+
+  @media(min-width: $desktop-width) {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    padding-left: 400px;
+    padding-right: 400px;
+  }
+
+  @media(min-width: $tablet-width) {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+
 }
 
-.photo-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
+.photo__picture {
 
-.photo__picture--day {
-  position: relative;
+  &--day {
+    position: relative;
+  }
+
 }
 
 .photo__wrapper {
-  background-color: #f2f2f2;
+  background-color: $dark-white;
   padding: 10px;
+
+  @media(min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 260px;
+
+  }
+
+  &--day {
+    width: 98%;
+
+  }
 }
 
-.photo-list__item {
-  display: flex;
-  flex-direction: column;
-  margin-top: 20px;
+.photo-wrapper--day {
+  width: 100%;
+  flex-direction: row;
 }
 
 .photo__username {
-  font-family: $Sans-Bold;
+  font-weight: 700;
   padding: 0;
   margin: 0;
 }
 
 .photo__activity {
-  font-family: $Sans-Light;
+  font-weight: 300;
   font-size: 12px;
   padding: 0;
   margin: 0;
@@ -52,24 +80,37 @@
 .photo__comment {
   padding: 0;
   margin: 0;
+
+  &--day {
+    order: 1;
+  }
 }
 
 .photo__like {
   margin: 0;
   padding: 0;
-  color: #d22856;
+  color: $light-red;
 }
 
 .photo__button-and-like {
   display: flex;
   flex-direction: row;
+
+  @media(min-width: $tablet-width) {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
 }
 
-.photo_like-button {
+.photo__like-button {
   background: 0 0;
   border: 0;
+
+  @media(min-width: $tablet-width) {
+    margin-left: 20px;
+  }
 }
 
 .photo__heart {
-  fill: #d53e67;
+  fill: $lighten-pink;
 }
