--- a/source/sass/components/section.scss
+++ b/source/sass/components/section.scss
@@ -1,5 +1,5 @@
 .page-main__intro {
-  background-color: #1d2631;
+  background-color: $darken-blue;
 }
 
 .page-main__info {
@@ -7,13 +7,38 @@
   background-repeat: no-repeat;
   background-position-y: -64px;
   display: flex;
+
+  @media (min-width: $tablet-width) {
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-size: cover;
+    margin-top: -89px;
+    background-position-y: 19px;
+    padding-bottom: 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+  }
+
 }
 
 .page-main__description {
-  font-family: $Sans-Light;
+  margin: 0;
   font-size: 24px;
-  font-weight: normal;
-  color: #ffffff;
+  font-weight: 300;
+  color: $white;
   padding: 10px;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 110px;
+      padding-left: 174px;
+  padding-right: 184px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 500px;
+    margin-left: 219px;
+    margin-right: 200px;
+  }
 }
