--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,4 +10,5 @@
 @import "components/features.scss";
 @import "components/page-footer.scss";
 @import "components/social-list.scss";
-@import "components/photo.scss"
+@import "components/photo.scss";
+@import "components/photo-list.scss";
