--- a/source/sass/base/fonts.scss
+++ b/source/sass/base/fonts.scss
@@ -2,25 +2,25 @@
   font-family: "Open-Sans";
   src: url("../fonts/opensans.woff") format("woff");
   src: url("../fonts/opensans.woff2") format("woff2");
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Open-Sans-Bold";
+  font-family: "Open-Sans";
   src: url("../fonts/opensansbold.woff") format("woff");
   src: url("../fonts/opensansbold.woff2") format("woff2");
-  font-weight: bold;
+  font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Open-Sans-Light";
+  font-family: "Open-Sans";
   src: url("../fonts/opensanslight.woff") format("woff");
   src: url("../fonts/opensanslight.woff2") format("woff2");
-  font-weight: normal;
+  font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
