--- a/source/sass/components/features.scss
+++ b/source/sass/components/features.scss
@@ -1,31 +1,31 @@
 .features__slogan {
-  font-family: $Sans-Light;
   font-size: 24px;
-  color: #283645;
-  font-weight: normal;
+  color: $dark-blue;
+  font-weight: 300;
   text-align: center;
+
+  &--one {
+    margin-bottom: 20px;
+    display: block;
+  }
+
+  &--two {
+    display: block;
+    padding-top: 10px;
+  }
 }
 
-.features__slogan--one {
-  margin-bottom: 20px;
-  display: block;
-}
-
-.features__slogan--two {
-  display: block;
-  padding-top: 10px;
-}
 
 .features__list {
   list-style: none;
-  background-color: #f2f2f2;
+  background-color: $dark-white;
   margin: 0;
   padding: 10px;
   text-align: center;
 }
 
 .features__name {
-  font-family: $Sans-Bold;
+  font-weight: 700;
   font-size: 18px;
   line-height: 24px;
 }
