--- a/source/sass/components/header.scss
+++ b/source/sass/components/header.scss
@@ -1,13 +1,18 @@
-.page-header--index {
-  background-color: #1d2631;
-  background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-size: 100% auto;
-  background-position: top center;
-  background-repeat: no-repeat;
-}
-
 .page-header {
-  background-color: #1d2631;
+  background-color: $darken-blue;
+  position: relative;
+
+  &--index {
+    background-image: url("../img/bg-back-mobile@1x.jpg");
+    background-size: 100% auto;
+    background-position: top center;
+    background-repeat: no-repeat;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-color: none;
+  }
+
 }
 
 .page-header__logo-svg {
