--- a/source/sass/components/page-intro.scss
+++ b/source/sass/components/page-intro.scss
@@ -1,13 +1,12 @@
 .page-intro__button {
   text-align: center;
   display: inline-block;
-  color: #ffffff;
+  color: $white;
   font-size: 18px;
   line-height: 18px;
   border-radius: 25px;
-  border: 3px solid #ffffff;
+  border: 3px solid $white;
   padding: 10px;
-  margin-left: 7px;
   margin-top: 10px;
 }
 
@@ -16,8 +15,8 @@
 }
 
 .page-intro__info {
-  font-family: $Sans-Light;
-  color: #ffffff;
+  font-weight: 400;
+  color: $white;
   text-align: center;
   padding: 20px;
 }
