--- a/source/sass/components/site-list.scss
+++ b/source/sass/components/site-list.scss
@@ -3,9 +3,28 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+
+  @media (min-width: $desktop-width) {
+    justify-content: flex-end;
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .site-list__link {
-  color: #ffffff;
+  color: $white;
   text-transform: uppercase;
+}
+
+.site-list__item {
+@media (min-width: $desktop-width) {
+  padding-left: 50px;
+    font-size: 18px;
+    padding-right: 40px;
+    line-height: 18px;
+    font-weight: 300;
+}
 }
