--- a/source/sass/components/social-list.scss
+++ b/source/sass/components/social-list.scss
@@ -9,21 +9,24 @@
 }
 
 .social-list__svg {
-  fill: #d22856;
+  fill: $light-red;
 }
 
 .social-list__item {
   padding: 7px;
-  border: 2px solid #e9ebec;
+  border: 2px solid $light-grey;
   border-radius: 50%;
   width: 19px;
   height: 19px;
-}
+  text-align: center;
 
-.social-list__link--facebook {
-  padding-left: 4px;
-}
+  @media (min-width: $desktop-width) {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 
-.social-list__link--youtube {
-  padding-left: 4px;
+  @media (min-width: $tablet-width) {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 }
