--- a/source/sass/components/features.scss
+++ b/source/sass/components/features.scss
@@ -22,6 +22,7 @@
   margin: 0;
   padding: 10px;
   text-align: center;
+  position: relative;
 }
 
 .features__name {
@@ -34,4 +35,20 @@
   width: 281px;
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.features__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.features__list::after {
+  content: "";
+  display: block;
+  height: 330px;
+  background-image: url(../img/iphone-screen-mobile@1x.png);
+  background-repeat: no-repeat;
+  background-position: center 50px;
 }
