--- a/source/sass/components/header.scss
+++ b/source/sass/components/header.scss
@@ -2,8 +2,15 @@
   background-color: $darken-blue;
   position: relative;
 
-  &--index {
     background-image: url("../img/bg-back-mobile@1x.jpg");
+    background-size: 100% auto;
+    background-position: top center;
+    background-repeat: no-repeat;
+
+
+  @media (min-width: $tablet-width) {
+    background-color: none;
+    background-image: url("../img/bg-back-tablet@1x.jpg");
     background-size: 100% auto;
     background-position: top center;
     background-repeat: no-repeat;
@@ -11,6 +18,10 @@
 
   @media (min-width: $desktop-width) {
     background-color: none;
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+    background-size: 100% auto;
+    background-position: top center;
+    background-repeat: no-repeat;
   }
 
 }
@@ -18,3 +29,4 @@
 .page-header__logo-svg {
   padding-left: 20px;
 }
+
