--- a/source/sass/components/section.scss
+++ b/source/sass/components/section.scss
@@ -1,5 +1,8 @@
 .page-main__intro {
   background-color: $darken-blue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .page-main__info {
@@ -32,8 +35,8 @@
 
   @media (min-width: $tablet-width) {
     padding-top: 110px;
-      padding-left: 174px;
-  padding-right: 184px;
+    padding-left: 174px;
+    padding-right: 184px;
   }
 
   @media (min-width: $desktop-width) {
