--- a/source/sass/components/header.scss
+++ b/source/sass/components/header.scss
@@ -1,32 +1,21 @@
 .page-header {
   background-color: $darken-blue;
   position: relative;
-
-    background-image: url("../img/bg-back-mobile@1x.jpg");
-    background-size: 100% auto;
-    background-position: top center;
-    background-repeat: no-repeat;
-
-
-  @media (min-width: $tablet-width) {
-    background-color: none;
-    background-image: url("../img/bg-back-tablet@1x.jpg");
-    background-size: 100% auto;
-    background-position: top center;
-    background-repeat: no-repeat;
-  }
-
-  @media (min-width: $desktop-width) {
-    background-color: none;
-    background-image: url("../img/bg-back-desktop@1x.jpg");
-    background-size: 100% auto;
-    background-position: top center;
-    background-repeat: no-repeat;
-  }
-
 }
 
 .page-header__logo-svg {
   padding-left: 20px;
 }
 
+.page-header__logo {
+  margin-right: auto;
+}
+
+.page-header__сontainer {
+
+  @media (min-width: $desktop-width) {
+  display: flex;
+  align-items: center;
+  padding: 48px 0;
+}
+  }
