--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -7,3 +7,13 @@
     background: rgba(0, 0, 0, 0.3);
   }
 }
+
+.main-nav__wrapper {
+  position: relative;
+}
+
+.main-nav__toggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
