--- a/source/sass/components/page-intro.scss
+++ b/source/sass/components/page-intro.scss
@@ -1,3 +1,21 @@
+.page-intro {
+
+    background-image: url("../img/bg-back-mobile@1x.jpg");
+    background-size: 100% auto;
+    background-position: top center;
+    background-repeat: no-repeat;
+
+
+  @media (min-width: $tablet-width) {
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+  }
+
+  @media (min-width: $desktop-width) {
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+  }
+
+}
+
 .page-intro__button {
   text-align: center;
   display: inline-block;
