--- a/source/sass/components/photo-list.scss
+++ b/source/sass/components/photo-list.scss
@@ -2,12 +2,18 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .photo-list__item {
   display: flex;
   flex-direction: column;
   margin-top: 20px;
+  justify-content: center;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
 
   @media (min-width: $tablet-width) {
     display: flex;
@@ -16,16 +22,9 @@
     margin: 0 0 21px;
   }
 
-    &--day {
-    @media (min-width: $tablet-width) {
-      width: 100%
-    }
-  }
-}
-
-.photo-list__wrapper {
-  @media (min-width: $tablet-width) {
-    display: flex;
-    flex-wrap: wrap;
+  &--day {
+    width: 100%;
+    height: auto;
+    padding: 0;
   }
 }
