--- a/source/sass/components/section.scss
+++ b/source/sass/components/section.scss
@@ -32,16 +32,10 @@
   color: $white;
   padding: 10px;
   text-align: center;
+  width: 100%;
 
   @media (min-width: $tablet-width) {
     padding-top: 110px;
-    padding-left: 174px;
-    padding-right: 184px;
   }
 
-  @media (min-width: $desktop-width) {
-    width: 500px;
-    margin-left: 219px;
-    margin-right: 200px;
-  }
 }
