--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -4,6 +4,8 @@ $dark-blue: #283645;
 
 $white: #ffffff;
 
+$black: #000000;
+
 $light-red: #d22856;
 
 $dark-white: #f2f2f2;
@@ -19,3 +21,5 @@ $light-grey: #e9ebec;
 $tablet-width: 660px;
 
 $desktop-width: 1200px;
+
+$light-blue: #485461;
