--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,4 +11,5 @@
 @import "components/page-footer.scss";
 @import "components/social-list.scss";
 @import "components/photo.scss";
+@import "components/panorama.scss";
 @import "components/photo-list.scss";
