--- a/source/sass/components/header.scss
+++ b/source/sass/components/header.scss
@@ -1,6 +1,12 @@
 .page-header {
-  background-color: $darken-blue;
-  position: relative;
+
+
+    @media (min-width: $desktop-width) {
+      position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    }
 }
 
 .page-header__logo-svg {
