--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,8 +2,8 @@
 @import "base/base.scss";
 @import "base/fonts.scss";
 @import "components/header.scss";
-@import "components/main-nav.scss";
 @import "components/site-list.scss";
+@import "components/main-nav.scss";
 @import "components/page-intro.scss";
 @import "components/section.scss";
 @import "components/available-list.scss";
@@ -13,3 +13,4 @@
 @import "components/photo.scss";
 @import "components/panorama.scss";
 @import "components/photo-list.scss";
+@import "components/analysis.scss";
