--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -4,31 +4,57 @@
   background-color: $dark-blue;
     min-height: 51px;
 
+    &--nojs {
+      .main-nav__list {
+        position: static;
+      }
+    }
+
 
   @media (min-width: $desktop-width) {
     background-color: transparent;
   }
 }
 
-.main-nav__wrapper {
-  position: relative;
-}
-
 .main-nav__toggle {
-  position: absolute;
-  top: -68px;
-  right: 0;
-  height: 66px;
+position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 100;
+    height: 66px;
+    background-color: red;
+    border: none;
+    background-color: black;
 
-  border: none;
-  background-color: inherit;
-
-  @media (min-width: $tablet-width) {
-    height: 110px;
-    top: -110px;
-  }
+    &--closed {
+      background-color: blue;
+    }
 
   @media (min-width: $desktop-width) {
     display: none;
   }
 }
+
+.main-nav__list {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+
+
+@media (min-width: $desktop-width) {
+  display: flex;
+  position: static;
+}
+  &--open {
+    display: block;
+
+    @media (min-width: $desktop-width) {
+  display: flex;
+  position: static;
+}
+  }
+}
+
+
