--- a/source/sass/components/section.scss
+++ b/source/sass/components/section.scss
@@ -8,7 +8,7 @@
 .page-main__info {
   background: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position-y: -64px;
+  background-size: cover;
   display: flex;
 
   @media (min-width: $tablet-width) {
