--- a/source/sass/components/available-list.scss
+++ b/source/sass/components/available-list.scss
@@ -11,3 +11,13 @@
 .available-list__item {
   padding: 10px;
 }
+
+.available-list__link--windows {
+  display: inline-block;
+    margin-top: 14px;
+}
+
+.available-list__link--android {
+  display: inline-block;
+  margin-top: 11px;
+}
