--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -2,6 +2,8 @@ $Open-Sans: "Open-Sans","Arial", sans-serif;
 
 $dark-blue: #283645;
 
+$light-white: #dddfe0;
+
 $white: #ffffff;
 
 $black: #000000;
@@ -22,6 +24,8 @@ $mobile-width: 320px;
 
 $tablet-width: 660px;
 
-$desktop-width: 1200px;
+$desktop-width: 940px;
 
 $light-blue: #485461;
+
+$dark-grey: #b5b9be;
