--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,8 +4,8 @@
 @import "components/header.scss";
 @import "components/site-list.scss";
 @import "components/main-nav.scss";
-@import "components/page-intro.scss";
 @import "components/section.scss";
+@import "components/page-intro.scss";
 @import "components/available-list.scss";
 @import "components/features.scss";
 @import "components/page-footer.scss";
@@ -14,3 +14,6 @@
 @import "components/panorama.scss";
 @import "components/photo-list.scss";
 @import "components/analysis.scss";
+@import "components/description.scss";
+@import "components/editor.scss";
+@import "components/comment.scss";
