--- a/source/sass/components/page-footer.scss
+++ b/source/sass/components/page-footer.scss
@@ -2,17 +2,18 @@
   padding: 10px;
   padding-left: 75px;
   padding-right: 74px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  @media (min-width: $desktop-width) {
-    display: flex;
-    flex-direction: row;
+
+  @media (min-width: $tablet-width) {
+      flex-direction: row;
     justify-content: space-between;
   }
 
-   @media (min-width: $tablet-width) {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  @media (min-width: $desktop-width) {
+    width: 940px;
   }
 }
 
@@ -27,5 +28,3 @@
   width: 27px;
   padding-top: 10px;
 }
-
-
