--- a/source/sass/components/page-intro.scss
+++ b/source/sass/components/page-intro.scss
@@ -8,12 +8,21 @@
 
   @media (min-width: $tablet-width) {
     background-image: url("../img/bg-back-tablet@1x.jpg");
+    display: flex;
+    flex-direction: row;
   }
 
   @media (min-width: $desktop-width) {
     background-image: url("../img/bg-back-desktop@1x.jpg");
   }
 
+}
+
+.page-intro__wrapper-picture-and-button {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .page-intro__button {
@@ -24,7 +33,7 @@
   line-height: 18px;
   border-radius: 25px;
   border: 3px solid $white;
-  padding: 10px;
+  padding: 16px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -53,9 +62,7 @@
     display: inline-block;
     width: 240px;
     text-align: center;
-    position: absolute;
-    left: 54px;
-    top: 119px;
+
   }
 }
 
@@ -68,8 +75,23 @@
 
   @media (min-width: $tablet-width) {
     background-color: transparent;
-    bottom: 259px;
-    left: -187px;
-    position: absolute;
+    order: -1;
+    position: relative;
+    z-index: 1;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 100px;
+  }
+}
+
+.page-intro__picture {
+  @media (min-width: $tablet-width) {
+    margin-left: -350px;
+    z-index: 0;
+  }
+}
+
+.page-intro__picture-hand {
+  display: block;
 }
