--- a/source/sass/components/social-list.scss
+++ b/source/sass/components/social-list.scss
@@ -6,6 +6,7 @@
   align-items: center;
   flex-direction: row;
   justify-content: space-evenly;
+  margin-top: 10px;
 }
 
 .social-list__svg {
@@ -19,14 +20,7 @@
   width: 19px;
   height: 19px;
   text-align: center;
+  margin-left: 5px;
+  margin-right: 5px;
 
-  @media (min-width: $desktop-width) {
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-
-  @media (min-width: $tablet-width) {
-    margin-left: 5px;
-    margin-right: 5px;
-  }
 }
