--- a/source/sass/components/editor.scss
+++ b/source/sass/components/editor.scss
@@ -28,6 +28,7 @@
 .editor__wrapper {
   display: flex;
   flex-direction: column;
+  width: 280px;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
