--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,3 +17,6 @@
 @import "components/description.scss";
 @import "components/editor.scss";
 @import "components/comment.scss";
+@import "components/contacts.scss";
+@import "components/price.scss";
+@import "components/contest.scss";
