--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -30,17 +30,19 @@ input[type="radio"].visually-hidden {
 }
 
 .container {
-  width: 280px;
+  width: 100%;
   margin: 0 auto;
   padding: 0;
   max-width: 1200px;
 
   @media (min-width: $tablet-width) {
-    width: 660px;
+    min-width: 660px;
+    margin: 0 auto;
   }
 
   @media (min-width: $desktop-width) {
-    width: 940px;
+    min-width: 940px;
+    margin: 0 auto;
   }
 }
 
