--- a/source/sass/components/analysis.scss
+++ b/source/sass/components/analysis.scss
@@ -49,18 +49,17 @@
 .analysis__item {
   padding: 20px;
   display: flex;
-  flex-direction: column;
   position: relative;
-  width: 320px;
-  margin-left: auto;
+  flex-direction: row-reverse;
+  width: 660px;
+  margin: 0 auto;
+  align-items: center;
 }
 
 .analysis__svg {
-  display: inline-block;
-  position: absolute;
-  top: 15px;
-  left: 20px;
-  top: -26px;
-  left: -300px;
   height: 280px;
+}
+
+.analysis__item--wrapper {
+  margin-left: auto;
 }
