--- a/source/sass/components/header.scss
+++ b/source/sass/components/header.scss
@@ -10,7 +10,7 @@
 }
 
 .page-header__logo-svg {
-  padding-left: 20px;
+  box-sizing: border-box;
 }
 
 .page-header__logo {
@@ -22,6 +22,7 @@
   @media (min-width: $desktop-width) {
   display: flex;
   align-items: center;
-  padding: 48px 0;
+  padding: 48px 20px;
+  box-sizing: border-box;
 }
   }
