--- a/source/sass/components/photo-list.scss
+++ b/source/sass/components/photo-list.scss
@@ -5,7 +5,15 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  max-width: 960px;
+  max-width: 280px;
+
+  @media (min-width: $tablet-width) {
+    max-width: 300px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 940px;
+  }
 }
 
 .photo-list__item {
@@ -13,8 +21,6 @@
   flex-direction: column;
   margin-top: 20px;
   align-items: center;
-  padding-left: 20px;
-  padding-right: 20px;
   justify-content: flex-start;
   box-sizing: border-box;
 
@@ -23,5 +29,21 @@
     flex-direction: column;
     width: 300px;
     margin: 0 auto 21px;
+  }
+}
+
+.photo-list__inner {
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+
+  @media (min-width: $tablet-width) {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: -25px;
+    margin-right: -25px;
   }
 }
