--- a/source/sass/components/photo.scss
+++ b/source/sass/components/photo.scss
@@ -66,19 +66,25 @@
 
 .photo__comment {
   padding: 0;
-  margin: 0;
+  margin: 0 0 36px;
 }
 
 .photo__like {
   margin: 0;
   padding: 0;
   color: $light-red;
+
+  @media (min-width: $tablet-width) {
+    margin-right: auto;
+    margin-left: 0;
+  }
 }
 
-.photo__button-and-like {
+.photo__but-like {
   display: flex;
   flex-direction: row;
   margin-top: auto;
+  align-items: center;
 
   @media(min-width: $tablet-width) {
     flex-direction: row-reverse;
@@ -91,10 +97,19 @@
   border: 0;
 
   @media(min-width: $tablet-width) {
-    margin-left: 20px;
+    margin-left: auto;
   }
 }
 
 .photo__heart {
   fill: $lighten-pink;
+}
+
+.photo__list-inner {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -20px;
+  margin-right: -20px;
+  list-style: none;
+  padding: 0;
 }
