--- a/source/sass/components/editor.scss
+++ b/source/sass/components/editor.scss
@@ -29,6 +29,7 @@
   display: flex;
   flex-direction: column;
   width: 280px;
+  margin: 0 auto;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
@@ -44,6 +45,7 @@
     padding-top: 56px;
     display: flex;
     padding-left: 14%;
+    box-sizing: border-box;
   }
 }
 
@@ -83,7 +85,7 @@
 }
 
 .editor__scale-items {
-  margin-left: 25px;
+  margin-left: 5px;
   margin-top: 18px;
 
   @media (min-width: $tablet-width) {
@@ -104,8 +106,7 @@
   @media (min-width: $tablet-width) {
     margin-top: 10px;
     margin-bottom: 25px;
-    width: 296px;
-    right: 50px;
+    width: 100%;
   }
 }
 
