--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -34,6 +34,7 @@ input[type="radio"].visually-hidden {
   margin: 0 auto;
   padding: 0;
   max-width: 1200px;
+  min-width: 320px;
 
   @media (min-width: $tablet-width) {
     min-width: 660px;
