--- a/source/sass/components/features.scss
+++ b/source/sass/components/features.scss
@@ -50,6 +50,7 @@
   position: relative;
   margin-left: auto;
   margin-right: auto;
+  box-sizing: border-box;
 
   @media (min-width: $tablet-width) {
     padding-bottom: 100px;
@@ -96,9 +97,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: auto;
   position: relative;
 
+  @media (min-width: $tablet-width) {
+    margin-left: auto;
+  }
 
   @media(min-width: $desktop-width) {
     margin-right: auto;
