--- a/source/sass/components/header.scss
+++ b/source/sass/components/header.scss
@@ -6,7 +6,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    }
+    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.4);
+}
 }
 
 .page-header__logo-svg {
