--- a/source/sass/components/price.scss
+++ b/source/sass/components/price.scss
@@ -6,7 +6,7 @@
   left: 0;
   right: 0;
 
-  @media (min-width:  $tablet-width) {
+  @media (min-width: $tablet-width) {
     display: none;
   }
 }
@@ -27,5 +27,31 @@
 
 .price-slider__toggle--active {
   box-shadow: 0 0 0 3px $dark-blue;
-    background-color: transparent;
+  background-color: transparent;
+}
+
+.price__table {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.price__title {
+  box-sizing: border-box;
+  min-width: 250px;
+  padding: 10px;
+  text-align: center;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 30px;
+  text-transform: uppercase;
+  background: #283645;
+  border: 2px solid #e5e5e5;
+}
+
+.price__cost {
+  display: block;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 30px;
 }
