--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -36,6 +36,7 @@ input[type="radio"].visually-hidden {
   max-width: 1200px;
   min-width: 320px;
 
+
   @media (min-width: $tablet-width) {
     min-width: 660px;
     margin: 0 auto;
@@ -57,4 +58,18 @@ input[type="radio"].visually-hidden {
   padding: 10px;
   border-radius: 30px;
   text-decoration: none;
+}
+
+.button-form {
+  display: block;
+  width: 280px;
+  height: 60px;
+  margin: 0 auto;
+  font-size: 18px;
+  font-weight: 700;
+  border: 0;
+  border-radius: 3px;
+  text-transform: uppercase;
+  background-color: #2aab6d;
+  color: $white;
 }
