--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,3 +20,4 @@
 @import "components/contacts.scss";
 @import "components/price.scss";
 @import "components/contest.scss";
+@import "components/submit-poppup.scss";
