--- a/source/sass/components/photo-list.scss
+++ b/source/sass/components/photo-list.scss
@@ -36,10 +36,12 @@
   padding: 0;
   display: flex;
   flex-wrap: wrap;
+  padding-left: 20px;
 
   @media (min-width: $tablet-width) {
     margin-left: -10px;
     margin-right: -10px;
+    padding-left: 0;
   }
 
   @media (min-width: $desktop-width) {
