--- a/source/sass/components/section.scss
+++ b/source/sass/components/section.scss
@@ -33,6 +33,7 @@
   padding: 10px;
   text-align: center;
   width: 100%;
+  padding-bottom: 40px;
 
   @media (min-width: $tablet-width) {
     padding-top: 110px;
