--- a/source/sass/components/contest.scss
+++ b/source/sass/components/contest.scss
@@ -2,11 +2,25 @@
   margin: 0;
   border: none;
   padding: 0;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.contest__form {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .contest__list {
   display: flex;
   flex-direction: column;
+  margin-left: 20px;
+  margin-right: 30px;
 }
 
 .contest__label {
@@ -16,23 +30,36 @@
   cursor: pointer;
 }
 
+.contest__item--number {
+  margin-bottom: 20px;
+}
+
 .contest__label-item {
   line-height: 30px;
   font-size: 14px;
   margin-left: 14px;
   text-transform: uppercase;
   color: #d22856;
+
+  @media (min-width: $tablet-width) {
+    margin-left: 0;
+    margin-right: 14px;
+  }
 }
 
 .contest__item {
-  display: flex;
-  flex-direction: column;
-  align-items: baseline;
   display: block;
   width: 280px;
   margin: 0 auto 20px;
   text-align: left;
   position: relative;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    width: 100%;
+  }
 }
 
 .contest__input {
@@ -48,28 +75,46 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 30px;
+
+  @media (min-width: $tablet-width) {
+    width: 100%;
+  }
 }
 
 .contest__input::placeholder {
   color: #283645;
 }
 
+
 .contest__description {
   width: 280px;
   margin: 0 auto;
-  font-size: 14px;
-  line-height: 30px;
   text-align: center;
   font-weight: 300;
   margin: 0;
   margin-top: 20px;
-  margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 20px;
+    font-size: 18px;
+    width: 500px;
+  }
 }
+
 
 .contest__filled-form {
   display: none;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+    font-size: 18px;
+    font-weight: 300;
+    text-align: center;
+    margin: 0;
+    margin-bottom: 20px;
+  }
 }
 
 .contest__legend {
@@ -128,6 +173,11 @@
 
 .contest__fieldset-wrapper {
   background-color: #f2f2f2;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .contest__fieldset--journey {
