--- a/source/sass/components/submit-poppup.scss
+++ b/source/sass/components/submit-poppup.scss
@@ -7,6 +7,7 @@
   background: $white;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
+  display: none;
 }
 
 .submit-poppup__title {
