--- a/source/sass/components/contest.scss
+++ b/source/sass/components/contest.scss
@@ -2,10 +2,14 @@
   margin: 0;
   border: none;
   padding: 0;
+  box-sizing: border-box;
 
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: column;
+    border: 2px solid #e5e5e5;
+    margin-bottom: 36px;
+    padding: 45px 30px 0;
   }
 }
 
@@ -13,6 +17,8 @@
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: column;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 }
 
@@ -21,6 +27,7 @@
   flex-direction: column;
   margin-left: 20px;
   margin-right: 30px;
+  padding: 0 20px;
 }
 
 .contest__label {
@@ -30,8 +37,18 @@
   cursor: pointer;
 }
 
-.contest__item--number {
-  margin-bottom: 20px;
+
+.contest__item--number::before {
+  content: "";
+  position: absolute;
+  right: 60px;
+  top: 1px;
+  width: 60px;
+  height: 60px;
+  background-image: url(../img/phone.svg);
+  background-repeat: no-repeat;
+  background-color: #e5e5e5;
+  background-position: 50% 50%;
 }
 
 .contest__label-item {
@@ -42,8 +59,8 @@
   color: #d22856;
 
   @media (min-width: $tablet-width) {
-    margin-left: 0;
     margin-right: 14px;
+    margin-left: 30px;
   }
 }
 
@@ -58,8 +75,21 @@
     display: flex;
     flex-direction: row;
     align-items: baseline;
-    width: 100%;
+    width: 600px;
   }
+}
+
+.contest__item--number {
+  margin-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+    margin-top: 3px;
+    margin-bottom: 29px;
+  }
+
 }
 
 .contest__input {
@@ -78,6 +108,7 @@
 
   @media (min-width: $tablet-width) {
     width: 100%;
+    margin-bottom: 8px;
   }
 }
 
@@ -95,6 +126,7 @@
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
+  font-size: 14px;
 
   @media (min-width: $tablet-width) {
     margin-top: 20px;
@@ -124,6 +156,11 @@
   color: $light-red;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 5px;
+    margin-bottom: 20px;
+  }
 }
 
 .contest__list {
@@ -169,10 +206,18 @@
 
 .contest__legend--information {
   display: none;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+  }
 }
 
 .contest__fieldset-wrapper {
   background-color: #f2f2f2;
+
+  @media (min-width: $tablet-width) {
+    background-color: transparent;
+  }
 
   @media (min-width: $tablet-width) {
     display: flex;
@@ -232,6 +277,7 @@
   margin-left: 41px;
   margin-right: 20px;
   margin-right: auto;
+  margin-bottom: 40px;
 }
 
 .contest__textarea::placeholder {
@@ -251,4 +297,36 @@
 
 .submit-poppup__close-button {
   margin-top: 20px;
+}
+
+.contest__fieldset--information {
+
+  @media (min-width: $tablet-width) {
+    order: -3;
+  }
+}
+
+.contest__fieldset--name {
+  @media (min-width: $tablet-width) {
+    order: -5;
+    border: none;
+  }
+}
+
+.contest__fieldset-wrapper--application {
+  @media (min-width: $tablet-width) {
+    order: -4;
+  }
+}
+
+.contest__fieldset-wrapper--journey {
+  @media (min-width: $tablet-width) {
+    order: 0;
+  }
+}
+
+.contest__fieldset--emotion {
+  @media (min-width: $tablet-width) {
+    border: none;
+  }
 }
